@@ -33,6 +33,7 @@ public interface ICDISession {
 	 * Returns the current debug target associatd with this sesion, 
 	 * or null if no debug targets are associated with this session. 
 	 * 
+	 * @deprecated
 	 * @return ICDITarget the current debug target
 	 */
 	ICDITarget getCurrentTarget();
@@ -40,6 +41,7 @@ public interface ICDISession {
 	/**
 	 * Set the current debug target associatd with this sesion.
 	 * 
+	 * @deprecated
 	 * @return ICDITarget the current debug target
 	 */
 	void setCurrentTarget(ICDITarget target) throws CDIException;
