@@ -1,3 +1,11 @@
+2004-09-09 Alain Magloire
+	Introduction of new classes in the CDI interface
+	* ICDIExecuteStep.java
+	* ICDIExecuteStepReturn.java
+	* ICDIExecuteResume.java
+	* ICDISuspend.java
+	* ICDIThreadGroup.java
+
 2004-09-07 Mikhail Khodjaiants
 	Fix for bug 73498: Condition is cleared when disabled conditional breakpoint is set.
 	* CBreakpointManager.java	
